--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hello",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sarah9090.github.io/myrepository/",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -12,6 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy":"npm run bulid ",
+    "deploy":"gh-pages -d bulid",
     "eject": "react-scripts eject"
   }
 }
